@@ -17,7 +17,7 @@ public class PostConverter {
         Integer personnel = post.getPersonnel();
 
         return SimplePostDTO.builder()
-                .imageUrl(postImageList.getFirst().getUrl())
+                .imageUrl(postImageList.get(0).getUrl())
                 .productName(post.getProductName())
                 .personnel(personnel)
                 .viewCount(post.getViewCount())
